JumpScript/tests/baselines/reference/project/visibilityOfTypeUsedAcrossModules2/node/visibilityOfTypeUsedAcrossModules2.errors.txt
main.jump(1,22): error TS1006: A file cannot have a reference to itself.
main.jump(2,22): error TS6053: File 'nonExistingFile1.jump' not found.
main.jump(3,22): error TS6053: File 'nonExistingFile2.jump' not found.


==== main.jump (3 errors) ====
    /// <reference path="main.jump" />
                         ~~~~~~~
!!! error TS1006: A file cannot have a reference to itself.
    /// <reference path="nonExistingFile1.jump" />
                         ~~~~~~~~~~~~~~~~~~~
!!! error TS6053: File 'nonExistingFile1.jump' not found.
    /// <reference path="nonExistingFile2.jump" />
                         ~~~~~~~~~~~~~~~~~~~
!!! error TS6053: File 'nonExistingFile2.jump' not found.